--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
 </head>
 <body>
     <div>
+
+        <h3>My First blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus voluptatum dicta enim dolore laudantium, dolorum necessitatibus quae vero itaque consequatur facilis debitis voluptatem nostrum, labore totam deserunt magni placeat tempora.</p>
+    </div>
+    <div>
+
+        <h3>My Second blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus voluptatum dicta enim dolore laudantium, dolorum necessitatibus quae vero itaque consequatur facilis debitis voluptatem nostrum, labore totam deserunt magni placeat tempora.</p>
+    </div>
+    <div>
+
+        <h3>My Third blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus voluptatum dicta enim dolore laudantium, dolorum necessitatibus quae vero itaque consequatur facilis debitis voluptatem nostrum, labore totam deserunt magni placeat tempora.</p>
+    </div>
+    <div>
+
         <h3>My First Website</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus voluptatum dicta enim dolore laudantium, dolorum necessitatibus quae vero itaque consequatur facilis debitis voluptatem nostrum, labore totam deserunt magni placeat tempora.</p>
     </div>
