--- a/index.html
+++ b/index.html
@@ -27,5 +27,19 @@
         <h3>My First Website</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus voluptatum dicta enim dolore laudantium, dolorum necessitatibus quae vero itaque consequatur facilis debitis voluptatem nostrum, labore totam deserunt magni placeat tempora.</p>
     </div>
+    <div>
+        <h3>You have to push incremental code</h3>
+        <ul>
+            <li>
+            git add .
+            </li>
+            <li>
+             git commit m"add a meaningful commit message "
+
+            </li>
+            <li>git push</li>
+        </ul>
+        
+    </div>
 </body>
 </html>
