added a new pic

--- a/index.html
+++ b/index.html
@@ -41,5 +41,9 @@
         </ul>
         
     </div>
+    <div>
+        <h3>kim kim kim khay everyday a single dim</h3>
+        <img src="images/messi.jpg" alt="">
+    </div>
 </body>
 </html>
